[package]
name = "http-server-v1"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
tokio = { version = "1.53.0", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
