[package]
name = "json-v1"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
