[package]
name = "websockets-v2"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
